<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/titulo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:baselineAligned="false">

        <Button
            android:id="@+id/btnseleccionar"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:onClick="onClicSeleccionar"
            android:text="@string/seleccionar" />

        <Button
            android:id="@+id/btningresar"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:onClick="onClicIngresar"
            android:text="@string/ingresar" />

    </LinearLayout>


</LinearLayout>
